--- a/css/styles.css
+++ b/css/styles.css
@@ -20,10 +20,14 @@
         --clients-border-color: #AFB1B8;
         --card-border-color: rgba(238, 238, 238, 1);
         --join-soc-link: rgba(255, 255, 255, 0.1);
+
+        --backdrop-overlay: rgba(0, 0, 0, 0.2);
+        --border-close-button-color: rgba(0, 0, 0, 0.1);
         
     }
 
 body {
+    
     font-family: 'Roboto', sans-serif;
     font-style: normal;
     letter-spacing: 0.03em;
@@ -128,7 +132,7 @@ body {
 .current-link {
     padding-top: 32px;
     padding-bottom: 32px;
-
+    
     display: block;
     
     font-weight: 500;
@@ -138,6 +142,32 @@ body {
 
     color: var(--accent-color);
 }
+
+.main-page.current-link::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 76px;
+    
+    width: 48px;
+    height: 4px;
+    
+    background-color: var(--accent-color);
+    border-radius: 2px;
+}
+
+.portfolio-page.current-link::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 76px;
+
+    width: 78px;
+    height: 4px;
+
+    background-color: var(--accent-color);
+    border-radius: 2px;
+} 
 
 .site-link:hover, .site-link:focus, .current-link:hover, .current-link:focus {
     color: var(--accent-color);
@@ -685,4 +715,61 @@ body {
     font-size: 16px;
     line-height: 1.88;
     color: var(--primary-text-color);
+}
+
+/* Модальне вікно */
+ .backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+
+    background-color: var(--backdrop-overlay);
+
+}
+
+.backdrop.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+}
+
+.modal {
+    display: flex;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    
+    width: 528px;
+    height: 581px;
+
+    padding: 8px;
+
+    background-color: var(--primary-background-color);
+}
+
+.close-modal {
+   display: inline-block;
+   margin-left: auto;
+   
+    padding: 6px;
+
+    width: 30px;
+    height: 30px;
+
+    border-radius: 50%;
+    border-color: 1px solid var(--border-close-button-color);
+    background-color: var(--primary-background-color);
+
+    color: var(--logo-text-color);
+
+    cursor: pointer;
+
+}
+
+.close-modal-icon {
+    fill: currentColor;
 }
