--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,11 @@
         --backdrop-overlay: rgba(0, 0, 0, 0.2);
         --border-close-button-color: rgba(0, 0, 0, 0.1);
         
+        --proposition-wrapper-background-color: rgba(47, 48, 58, 0.8);
+
+        --work-card-overlay-background: rgba(33, 150, 243, 0.9);
+
+        --main-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     }
 
 body {
@@ -81,6 +86,8 @@ body {
     line-height: 1.19;
 
     color: var(--logo-text-color);
+
+    transition: color 250ms var(--main-timing-function); 
 }
 
  .footer .logo-link {
@@ -89,6 +96,7 @@ body {
 
     display: inline-block;
     color: var(--primary-white-color);
+
  }
 
  .logo-link:hover,
@@ -127,6 +135,8 @@ body {
     letter-spacing: 0.02em;
 
     color: var(--secondary-text-color);
+
+    transition: color 250ms var(--main-timing-function);
 }
 
 .current-link {
@@ -167,7 +177,7 @@ body {
 
     background-color: var(--accent-color);
     border-radius: 2px;
-} 
+}
 
 .site-link:hover, .site-link:focus, .current-link:hover, .current-link:focus {
     color: var(--accent-color);
@@ -195,6 +205,8 @@ body {
     letter-spacing: 0.02em;
     
     color: var(--primary-text-color);
+
+    transition: color 250ms var(--main-timing-function);
 }
 
 .icon-envelope, .icon-smartphone {
@@ -264,6 +276,8 @@ body {
 
     border-radius: 4px;
     cursor: pointer;
+
+    transition: color 250ms var(--main-timing-function), background-color 250ms var(--main-timing-function), border-color 250ms var(--main-timing-function);;
 }
 
 .primary-button:hover, .primary-button:focus {
@@ -352,7 +366,9 @@ body {
 }
 
 .prosition-list .item {
+    position: relative;
     margin-right: 30px;
+
 }
 
 .prosition-list .item:last-child {
@@ -361,6 +377,36 @@ body {
 
 .card-image {
     display: block;
+}
+
+.proposition-description-wrapper {
+    position: absolute;
+    
+    bottom: 0;
+    left: 0;
+
+    width: 100%;
+    height: 70px;
+
+    padding-top: 27px;
+    padding-bottom: 27px;
+    padding-right: 80px;
+    padding-left: 80px;
+    
+    background-color: var(--proposition-wrapper-background-color);
+}
+
+.proposition-description {
+    margin: 0;
+   
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-align: center;
+        
+    text-transform: uppercase;
+    
+    color: var(--primary-white-color)
 }
 
 /* Секція Наша команда */
@@ -433,7 +479,7 @@ body {
     justify-content: center;
 }
 
-.team-soc-item{
+.team-soc-item {
     margin-right: 10px;
 }
 
@@ -450,6 +496,8 @@ body {
     height: 44px;
     border-radius: 50%;
     color: var(--clients-border-color);
+
+    transition: color 250ms var(--main-timing-function), background-color 250ms var(--main-timing-function);
 }
 
 .team-soc-icon {
@@ -503,6 +551,8 @@ body {
     border-radius: 4px; 
       
     color: var(--clients-border-color);
+
+    transition: color 250ms var(--main-timing-function), background-color 250ms var(--main-timing-function);
 }
 
 .icon-company {
@@ -511,7 +561,7 @@ body {
 
 .link-company:hover, .link-company:hover {
     border-color: var(--accent-color);
-    color: #188CE8;
+    color: var(--primary-button-hover-color);
 }
 
 /* Футер */
@@ -548,6 +598,8 @@ body {
     font-style: normal;
     
     color: var(--secondary-white-color);
+
+    transition: color 250ms var(--main-timing-function);
 }
 
 .contacts-link:hover, .contacts-link:focus {
@@ -603,6 +655,8 @@ body {
     border-radius: 50%;
     background-color: var(--join-soc-link);
     color: var(--primary-white-color);
+
+    transition: color 250ms var(--main-timing-function), background-color 250ms var(--main-timing-function);
 }
 
 .join-soc-icon {
@@ -648,6 +702,8 @@ body {
     border-radius: 4px;
     border-color: var(--secondary-background-color);
     cursor: pointer;
+
+    transition: color 250ms var(--main-timing-function), background-color 250ms var(--main-timing-function), border-color 250ms var(--main-timing-function), box-shadow 250ms var(--main-timing-function);
 }
 
 .secondary-button:hover,
@@ -669,7 +725,8 @@ body {
     width: calc((100% - 60px) / 3);
     margin-right: 30px;
     margin-bottom: 30px;
-   
+
+    transition: box-shadow 250ms var(--main-timing-function);
 }
 
 .work-list .item:nth-child(3n) {
@@ -686,8 +743,48 @@ body {
     box-shadow: var(--portfolio-card-shadow);
 }
 
+.work-image-wrapper {
+   position: relative;
+
+    overflow: hidden;
+}
+
 .work-img {
     display: block;
+}
+
+.work-card-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+
+    padding: 63px 24px;
+
+    background-color: var(--work-card-overlay-background);
+
+    transform: translateY(100%);
+
+    transition: transform 250ms var(--main-timing-function);
+    
+}
+
+.card-overlay-description {
+    margin-top: 0;
+    margin-bottom: 0;
+
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.56;
+    
+    color: var(--primary-white-color);
+}
+
+
+.card:hover .work-card-overlay {
+    transform: translateY(0);
 }
 
 .card-content {
@@ -728,11 +825,21 @@ body {
 
     background-color: var(--backdrop-overlay);
 
+    opacity: 1;
+
+    transition: opacity 500ms var(--main-timing-function);
+
 }
 
 .backdrop.is-hidden {
+    visibility: visible;
     opacity: 0;
     pointer-events: none;
+
+}
+
+.backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%) scale(0.5);
 }
 
 .modal {
@@ -741,7 +848,6 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     
     width: 528px;
     height: 581px;
@@ -749,6 +855,10 @@ body {
     padding: 8px;
 
     background-color: var(--primary-background-color);
+
+    transform: translate(-50%, -50%) scale(1);
+
+    transition: transform 500ms var(--main-timing-function);
 }
 
 .close-modal {
